# agent-orchestration-framework

./: .gitignore  LICENSE  README.md  pyproject.toml
agents/: __init__.py  base.py  reasoning_agent.py  retrieval_agent.py  validation_agent.py  verification_agent.py
api/: __init__.py  auth.py  health.py  models.py  routes.py
config/: __init__.py  agents.yaml  evaluation.yaml  logging.py  orchestration.yaml  settings.py
evaluation/: __init__.py  harness.py  metrics.py
evaluation/test_cases/: sample_cases.yaml
observability/: __init__.py  metrics.py  telemetry.py  traces.py
orchestrator/: __init__.py  circuit_breaker.py  retry_policy.py  state_machine.py
tests/: conftest.py
tests/integration/: test_full_pipeline.py  test_validation_to_retrieval.py
tests/unit/: test_api.py  test_base_agent.py  test_circuit_breaker.py  test_config.py  test_evaluation.py  test_observability.py  test_reasoning_agent.py  test_retrieval_agent.py  test_retry_policy.py  test_state_machine.py  test_validation_agent.py  test_verification_agent.py
