[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-orchestration-framework"
version = "0.1.0"
description = "Production-grade multi-agent AI orchestration framework"
readme = "README.md"
authors = [{ name = "Opeyemi Momodu" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["ai", "agents", "orchestration", "rag", "fastapi", "observability", "multi-agent"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Framework :: FastAPI",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.5",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "anyio>=4.4",
  "opentelemetry-api>=1.25",
  "opentelemetry-sdk>=1.25",
  "opentelemetry-exporter-otlp-proto-grpc>=1.25",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "structlog>=24.4",
  "litellm>=1.50",
  "pyyaml>=6.0",
  "chromadb>=0.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "black>=24.8",
  "mypy>=1.10",
  "deepeval>=1.4",
  "respx>=0.21",
]
production = [
  "qdrant-client>=1.11",
]

[tool.setuptools]
packages = { find = { where = ["."], include = [
  "agents*",
  "orchestrator*",
  "observability*",
  "evaluation*",
  "api*",
  "config*",
] } }

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I", "UP", "B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "-ra -q"
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
